tests/ui/consts/const-eval/heap/alloc_intrinsic_errors.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/alloc_intrinsic_errors.rs:9:17
   |
LL |         let _ = intrinsics::const_allocate(4, 3) as *mut i32;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid align passed to `const_allocate`: 3 is not a power of 2
   |
note: inside `foo`
  --> $DIR/alloc_intrinsic_errors.rs:9:17
   |
LL |         let _ = intrinsics::const_allocate(4, 3) as *mut i32;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `FOO`
  --> $DIR/alloc_intrinsic_errors.rs:6:18
   |
LL | const FOO: i32 = foo();
   |                  ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
